--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,8 @@
 site_name: Senior Support Hub
 site_description: Practical, end-to-end guides for key eldercare workflows
-site_url: https://sinecoug.github.io/senior-support-hub/
-
-repo_name: sinecoug/senior-support-hub
-repo_url: https://github.com/sinecoug/senior-support-hub
-edit_uri: edit/main/docs/
-
+site_url: https://<your-username>.github.io/senior-support-hub/
 theme:
   name: material
-  custom_dir: docs/overrides
   features:
     - navigation.sections
     - navigation.top
@@ -27,7 +21,6 @@ theme:
       scheme: slate
       primary: indigo
       accent: indigo
-
 markdown_extensions:
   - admonition
   - attr_list
@@ -42,26 +35,20 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.emoji:
       emoji_generator: !!python/name:materialx.emoji.to_svg
-
 plugins:
   - search
-  - sitemap
   - git-revision-date-localized:
       fallback_to_build_date: true
-
-extra_css:
-  - styles/extra.css
-
 nav:
   - Home: index.md
   - NDLS:
       - Overview: concepts/ndls_overview.md
       - Reference:
-          - Licence categories: reference/licence_categories.md
+          - Licence categories: reference/vehicle_categories.md
           - Accepted file formats: reference/accepted_file_formats.md
       - Tasks:
-          - Renewing your driving licence online: tasks/renewing_driving_licence_online.md
-          - Uploading a medical report: tasks/uploading_medical_report.md
-          - Returning to a saved renewal: tasks/returning_to_saved_renewal.md
-  - About this project: about.md
-
+          - Renewing your driving licence online: tasks/renewing-driving-licence-online.md
+          - Obtaining a medical or eyesight report: tasks/obtaining-medical-or-eyesight-report.md
+          - Uploading a medical report: tasks/uploading-medical-report.md
+          - Returning to a saved renewal: tasks/returning-to-saved-renewal.md
+  - About this project: README.md
